salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/QuickBooksConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>QuickBooks Configuration</label>
</CustomObject>