salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Carrier_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Suffix__c</fullName>
    <description>Appended to carrier names in to instruct QuickBooks that this is a Vendor account</description>
    <inlineHelpText>Appended to carrier names in to instruct QuickBooks that this is a Vendor account</inlineHelpText>
    <label>Carrier Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>