salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Company_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Company_Prefix__c</fullName>
    <defaultValue>&#39;FOX&#39;</defaultValue>
    <description>Used along with the system date to construct QuickBooks file name</description>
    <inlineHelpText>Used along with the system date to construct QuickBooks file name</inlineHelpText>
    <label>Company Prefix</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>