salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Create_Invoice_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice_Transactions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Invoice Transactions</label>
    <type>Checkbox</type>
</CustomField>