salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Create_Vendor_LIst__c.field-meta.xml
<CustomField>
    <fullName>Create_Vendor_LIst__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Vendor LIst</label>
    <type>Checkbox</type>
</CustomField>