salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Customer_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Customer_Suffix__c</fullName>
    <description>Appended to carrier names in to instruct QuickBooks that this is a Customer account</description>
    <inlineHelpText>Appended to carrier names in to instruct QuickBooks that this is a Customer account</inlineHelpText>
    <label>Customer Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>