salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <defaultValue>&#39;dd/MM/YYYY&#39;</defaultValue>
    <label>Date Format</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>