salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Email_QB_File_To__c.field-meta.xml
<CustomField>
    <fullName>Email_QB_File_To__c</fullName>
    <defaultValue>&#39;cmcelroy@revenova.com&#39;</defaultValue>
    <description>The recipient of the quickbooks file email</description>
    <inlineHelpText>The recipient of the quickbooks file email</inlineHelpText>
    <label>Email_QB_File_To</label>
    <required>true</required>
    <type>Email</type>
</CustomField>