salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Process_Customer_Invoice_Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Customer_Invoice_Load_Status__c</fullName>
    <defaultValue>&#39;Completed&#39;</defaultValue>
    <description>Specifies the status a load must have to for the CUSTOMER invoice to be included QuickBooks processing.</description>
    <inlineHelpText>Specifies the status a load must have to for the CUSTOMER invoice to be included QuickBooks processing.</inlineHelpText>
    <label>Process Customer Invoice Load Status</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>