salesforce-integration/Salesforce Components/objects/QuickBooksConfiguration__c/fields/Process_Vendor_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Vendor_Invoice_Status__c</fullName>
    <label>Process Vendor Invoice Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>